API-1399 stop codes ETL table (#111)