@@ -2,15 +2,15 @@ package gov.va.api.lighthouse.facilitiescollector;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.google.common.collect.ImmutableMap;
-import java.sql.Connection;
-import java.sql.ResultSet;
+import com.google.common.collect.Iterables;
 import java.util.List;
+import java.util.Map;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
+import org.springframework.boot.test.autoconfigure.orm.jpa.TestEntityManager;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
@@ -21,11 +21,7 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 public class CdwControllerTest {
   @Autowired JdbcTemplate template;
 
-  @SneakyThrows
-  @SuppressWarnings("unused")
-  public static ResultSet stopCodeWaitTimesPaginated(Connection conn, int page, int count) {
-    return conn.prepareStatement("SELECT * FROM APP.VHA_Stop_Code_Wait_Times").executeQuery();
-  }
+  @Autowired TestEntityManager testEntityManager;
 
   @Test
   public void mentalHealthContacts() {
@@ -36,13 +32,28 @@ public class CdwControllerTest {
             + "Extension VARCHAR"
             + ")");
 
-    assertThat(new CdwController(template).mentalHealthContacts()).isEmpty();
+    template.execute(
+        "INSERT INTO App.VHA_Mental_Health_Contact_Info ("
+            + "StationNumber,"
+            + "MHPhone,"
+            + "Extension"
+            + ") VALUES ("
+            + "'999',"
+            + "'800-867-5309',"
+            + "'1234'"
+            + ")");
+
+    assertThat(new CdwController(template).mentalHealthContacts())
+        .isEqualTo(
+            List.of(
+                Map.of("STATIONNUMBER", "999", "MHPHONE", "800-867-5309", "EXTENSION", "1234")));
   }
 
   @Test
+  @SneakyThrows
   public void stopCodes() {
     template.execute(
-        "CREATE TABLE App.VHA_Stop_Code_Wait_Times ("
+        "CREATE TABLE App.VSSC_ClinicalServices ("
             + "Sta6a VARCHAR,"
             + "PrimaryStopCode VARCHAR,"
             + "PrimaryStopCodeName VARCHAR,"
@@ -50,7 +61,7 @@ public class CdwControllerTest {
             + ")");
 
     template.execute(
-        "INSERT INTO App.VHA_Stop_Code_Wait_Times ("
+        "INSERT INTO App.VSSC_ClinicalServices ("
             + "Sta6a,"
             + "PrimaryStopCode,"
             + "PrimaryStopCodeName,"
@@ -62,14 +73,10 @@ public class CdwControllerTest {
             + "'14.15'"
             + ")");
 
-    template.execute(
-        "CREATE ALIAS App.VHA_Stop_Code_Wait_Times_Paginated FOR"
-            + " \"gov.va.api.lighthouse.facilitiescollector.CdwControllerTest.stopCodeWaitTimesPaginated\"");
-
     assertThat(new CdwController(template).stopCodes())
         .isEqualTo(
             List.of(
-                ImmutableMap.of(
+                Map.of(
                     "STA6A",
                     "402GA",
                     "PRIMARYSTOPCODE",
@@ -78,5 +85,14 @@ public class CdwControllerTest {
                     "PRIMARY CARE/MEDICINE",
                     "AVGWAITTIMENEW",
                     "14.15")));
+  }
+
+  @Test
+  @SneakyThrows
+  public void vast() {
+    testEntityManager.persistAndFlush(
+        VastEntity.builder().vastId(1L).stationNumber("123").stationName("Some VAMC").build());
+    assertThat(Iterables.getOnlyElement(new CdwController(template).vast()))
+        .containsAllEntriesOf(Map.of("VAST_ID", "1", "STA_NO", "123", "STATION_NAME", "Some VAMC"));
   }
 }
